# ddns

./: README.md
client/: Cargo.toml  README.md  example_requests.json
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
external_server/: .gitignore  Cargo.toml  README.md
external_server/src/: main.rs
gateway_server/: Cargo.toml  README.md
gateway_server/src/: main.rs
mock_server/: Cargo.toml  README.md
mock_server/src/: main.rs
