[package]
name = "ddns_client"
version = "0.1.0"
authors = ["Christopher Patton <chpatton013@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
clap = "2.33"
derive-new = "0.5.8"
envsubst = "0.1.1"
http = "0.1.17"
hyper = "0.12"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde_json = "1.0"
tokio = "0.1.22"
ddns_common = { version = "0.1", path = "../common" }
