[package]
name = "ddns_external_server"
version = "0.1.0"
authors = ["Christopher Patton <chpatton013@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
derive-new = "0.5.8"
hyper = "0.12"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde_json = "1.0"
ddns_common = { version = "0.1", path = "../common" }
